[gd_scene load_steps=4 format=3 uid="uid://dj7fihehv34p7"]

[ext_resource type="Script" uid="uid://cqqadepn83m1p" path="res://scenes/UI/commands/functions/function_edition.gd" id="1_cgba8"]
[ext_resource type="Texture2D" uid="uid://defmvwypi571s" path="res://Assets/Images/UI/coding_background.png" id="2_4icaw"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5j20n"]
texture = ExtResource("2_4icaw")
texture_margin_left = 64.0
texture_margin_top = 64.0
texture_margin_right = 51.0
texture_margin_bottom = 75.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(0, 0, 435, 331)

[node name="FunctionEdition" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cgba8")

[node name="FunctionName" type="Label" parent="."]
layout_mode = 0
offset_right = 1600.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_5j20n")

[node name="ArgumentsEdition" type="HBoxContainer" parent="."]
layout_mode = 0
offset_top = 31.0
offset_right = 1600.0
offset_bottom = 97.0

[node name="Arguments" type="HBoxContainer" parent="ArgumentsEdition"]
layout_mode = 2

[node name="Btns" type="VBoxContainer" parent="ArgumentsEdition"]
layout_mode = 2

[node name="Add" type="Button" parent="ArgumentsEdition/Btns"]
layout_mode = 2
text = "Add"

[node name="Delete" type="Button" parent="ArgumentsEdition/Btns"]
layout_mode = 2
text = "Delete"

[node name="Code" type="Control" parent="."]
anchors_preset = 0
offset_top = 101.0
offset_right = 1600.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="ArgumentsEdition/Btns/Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="ArgumentsEdition/Btns/Delete" to="." method="_on_delete_pressed"]
